<resources>
    <string name="app_name">pruebaFirebase</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="descripcion_tarea">Descripción de la tarea</string>
    <string name="normal">Normal</string>
    <string name="importante">Importante</string>
    <string name="urgente">Urgente</string>
    <string name="seleccionaFecha">Selecciona una fecha</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_formato">Fecha: </string>
    <string name="crear_tarea">Crear Tarea</string>
    <string name="mensaje_descripcion">Debes poner una descripción</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cambios_subidos">Cambios subidos al servidor</string>
    <string name="tarea_creada">Tarea creada</string>
    <string name="modificar_tarea">Modificar Tarea</string>
    <string name="delete">Borrar</string>
</resources>